Alignment styling corrections

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -459,9 +459,9 @@ fieldset.user-info {
   display: inline-block;
   width: 100%;
   height: 100%;
-  line-height: 1.5;
+  line-height: 2.7;
   vertical-align: middle;
-  padding-top: 6%;
+  /* padding-top: 6%; */
 }
 
 #action-bar form {
@@ -591,11 +591,24 @@ fieldset.user-info {
 }
 
 #edit-submit {
-
+  margin-top: 20px;
+  width: 100%;
+  height: 30px;
+  cursor: pointer;
 }
 
 #edit-back {
-  
+  margin-top: 10px;
+  width: 100%;
+  height: 30px;
+}
+
+#edit-back a {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  text-align: center;
+  line-height: 2;
 }
 
 #new-main textarea {
